<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/dialog_margin">

    <TextView
        android:id="@+id/text_view_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_save_painting_title"
        android:layout_marginTop="8dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/edit_text_painting_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_title_hint"
        android:maxLength="100"
        app:layout_constraintTop_toBottomOf="@+id/text_view_dialog_title"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/edit_text_painting_author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_author_hint"
        android:maxLength="100"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_painting_title"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/edit_text_painting_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_description_hint"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_painting_author"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/text_view_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_painting_description"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="@id/edit_text_painting_description"
        android:layout_marginRight="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/holo_red_light"
        android:text="@string/dialog_error_fill_required_fields_message"/>
</android.support.constraint.ConstraintLayout>