<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fmoyader.becomepainter.activities.CanvasActivity">

    <com.example.fmoyader.becomepainter.views.CanvasView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/canvas" />

    <Button
        android:id="@+id/button_save"
        android:theme="@style/buttonDrawActivity"
        android:layout_width="@dimen/button_drawing_size"
        android:layout_height="@dimen/button_drawing_size"
        android:background="@drawable/pink_gradient_round_shape"
        android:text="@string/button_save_text"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_erase"
        android:theme="@style/buttonDrawActivity"
        android:layout_width="@dimen/button_drawing_size"
        android:layout_height="@dimen/button_drawing_size"
        android:background="@drawable/blue_gradient_round_shape"
        android:text="@string/button_erase_text"
        custom:layout_constraintRight_toRightOf="@id/button_save"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_save" />

</android.support.constraint.ConstraintLayout>
