...

    <!-- Dialogs -->
    <string name="dialog_erase_painting_message">Are you sure you want to erase your painting? You will not be able to get it back.</string>
    <string name="dialog_save_painting_message">Do you wanna save the new changes made on the drawing?</string>
    <string name="dialog_erase_painting_title">ERASING PAINTING</string>
    <string name="dialog_cancel_text">CANCEL</string>
    <string name="dialog_save_text">@string/button_save_text</string>
    <string name="dialog_erase_text">@string/button_erase_text</string>
    <string name="dialog_author_hint">*Author</string>
    <string name="dialog_description_hint">Description</string>
    <string name="dialog_title_hint">*Title</string>
    <string name="dialog_save_painting_title">Save painting?</string>
    <string name="dialog_error_fill_required_fields_message">Please, fill in the required fieds</string>
...
    <!-- Widget -->
    <string name="widget_title">Your Drawings</string>
    <string name="widget_empty_list_message">You have no drawings to show</string>

    <!-- Drawer Menu -->
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_my_drawings">My Drawings</string>
    <string name="drawer_item_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prefix_author">by</string>

...
